# spin-fileserver

./: Cargo.toml  Makefile  README.md  index.html  readme.md  spin.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
adapters/fd1e948d/: wasi_snapshot_preview1.reactor.wasm
examples/javascript/: README.md  app.mjs  build.mjs  spin.toml
examples/python/: README.md  app.py  compose.yml  spin.toml
examples/rust/: Cargo.toml  README.md  spin.toml
examples/rust-classic/: Cargo.toml  README.md  spin.toml
examples/rust-standalone/: Cargo.toml  README.md  spin.toml
examples/rust/src/: lib.rs
examples/wit/: delegate.wit  proxy.wit
src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
