[package]
name = "spin-static-fs"
version = "0.1.0"
edition = "2021"
authors = ["Radu Matei <radu.matei@fermyon.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Helpful crate to manage errors.
anyhow = "1.0"
# Crate to simplify working with bytes.
bytes = "1.0"
# Brotli compression makes big things less big
brotli = "3.3"
# HTTP crate helpful for the header keys.
http = "0.2"
# Helper to guess the media type based on the file extension.
mime_guess = "2.0"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.6.0" }
# The wit-bindgen-rust dependency generates bindings for interfaces.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]
